force-app/main/default/objects/FIN_ChartOfAccounts__c/FIN_ChartOfAccounts__c.object-meta.xml
<CustomObject>
    <label>Chart of Accounts</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charts of Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>