force-app/main/default/objects/FIN_ChartOfAccounts__c/fields/FIN_Account__c.field-meta.xml
<CustomField>
    <fullName>FIN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Charts of Accounts</relationshipLabel>
    <relationshipName>Charts_of_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>