force-app/main/default/objects/FIN_ChartOfAccounts__c/fields/FIN_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>FIN_Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
                <default>true</default>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
            <value>
                <fullName>Revenues</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>