force-app/main/default/objects/FIN_ChartOfAccounts__c/fields/FIN_Active__c.field-meta.xml
<CustomField>
    <fullName>FIN_Active__c</fullName>
    <formula>TODAY() &gt; FIN_Start_Date__c
&amp;&amp;
TODAY() &lt; FIN_End_Date__c ||
ISNULL(FIN_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>