force-app/main/default/objects/FIN_ChartOfAccounts__c/fields/FIN_Category__c.field-meta.xml
<CustomField>
    <fullName>FIN_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CASH - CLIENT CASH</fullName>
            </value>
            <value>
                <fullName>CASH - CLIENT CASH - DENVER</fullName>
            </value>
            <value>
                <fullName>A/R - AXS DISTRO A</fullName>
            </value>
            <value>
                <fullName>A/R - CREDIT CARD</fullName>
            </value>
            <value>
                <fullName>A/R - PAYPAL</fullName>
            </value>
            <value>
                <fullName>ADVANCE RECOUPMENT</fullName>
            </value>
            <value>
                <fullName>LIABILITY - DUE TO VENUES</fullName>
            </value>
            <value>
                <fullName>LIABILITY - DUE TO PROMOTERS - COD</fullName>
            </value>
            <value>
                <fullName>LIABILITY - SOUVENIR TICKET LIABILITY</fullName>
            </value>
            <value>
                <fullName>LIABILITY - SALES TAX LIABILITY</fullName>
            </value>
            <value>
                <fullName>REVENUE - NON TICKET SALES REVENUE</fullName>
            </value>
            <value>
                <fullName>REVENUE - TICKET FEES PROGRAMMED</fullName>
            </value>
            <value>
                <fullName>REVENUE - TICKET FEES INCREMENTAL</fullName>
            </value>
            <value>
                <fullName>REVENUE - TICKET FEES DELIVERY</fullName>
            </value>
            <value>
                <fullName>REVENUE - PAYMENT PLAN FEES</fullName>
            </value>
            <value>
                <fullName>REVENUE - TICKET FEES INVOICED</fullName>
            </value>
            <value>
                <fullName>REVENUE - TICKET FEES DELIVERY INVOICED</fullName>
            </value>
            <value>
                <fullName>REVENUE - TICKET FEES - PREMIUM</fullName>
            </value>
            <value>
                <fullName>REVENUE - TICKET FEES - VIP</fullName>
            </value>
            <value>
                <fullName>REVENUE - TICKET FEES - AXS DISTRO A</fullName>
            </value>
            <value>
                <fullName>REVENUE - PER ORDER FEES PROGRAMMED</fullName>
            </value>
            <value>
                <fullName>REVENUE - PAYMENT RECOVERY FEE</fullName>
            </value>
            <value>
                <fullName>REVENUE - RFID SHIPPING</fullName>
            </value>
            <value>
                <fullName>REVENUE - RFID FULFILLMENT</fullName>
            </value>
            <value>
                <fullName>REVENUE - RFID ACTIVATIONS</fullName>
            </value>
            <value>
                <fullName>EXPENSES - CBNL PAYMENTS</fullName>
            </value>
            <value>
                <fullName>EXPENSES - BUILD AND CUSTOMER ISSUES</fullName>
            </value>
            <value>
                <fullName>Tickets</fullName>
            </value>
            <value>
                <fullName>Gross Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>