force-app/main/default/objects/FIN_ChartOfAccounts__c/fields/FIN_Contract__c.field-meta.xml
<CustomField>
    <fullName>FIN_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Charts of Accounts</relationshipLabel>
    <relationshipName>Charts_of_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>