force-app/main/default/objects/FIN_ChartOfAccounts__c/fields/FIN_Losses__c.field-meta.xml
<CustomField>
    <fullName>FIN_Losses__c</fullName>
    <formula>-1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Losses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>