force-app/main/default/objects/FIN_ChartOfAccounts__c/fields/FIN_PerOrderFeeRev__c.field-meta.xml
<CustomField>
    <fullName>FIN_PerOrderFeeRev__c</fullName>
    <formula>1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Sales Fee Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>