force-app/main/default/objects/FIN_ChartOfAccounts__c/fields/FIN_PremiumFeeRev__c.field-meta.xml
<CustomField>
    <fullName>FIN_PremiumFeeRev__c</fullName>
    <formula>5000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium Fee Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>