force-app/main/default/objects/FIN_ChartOfAccounts__c/fields/FIN_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FIN_Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>