force-app/main/default/objects/FIN_ChartOfAccounts__c/fields/FIN_TicketSalesLiability__c.field-meta.xml
<CustomField>
    <fullName>FIN_TicketSalesLiability__c</fullName>
    <formula>-60000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Sales Liability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>