force-app/main/default/objects/FIN_ChartOfAccounts__c/recordTypes/FIN_SWE_Financial_Chart_of_Accounts.recordType-meta.xml
<RecordType>
    <fullName>FIN_SWE_Financial_Chart_of_Accounts</fullName>
    <active>true</active>
    <label>SWE Financial Chart of Accounts</label>
</RecordType>