force-app/main/default/objects/FIN_ChartOfAccounts__c/recordTypes/FIN_US_Statistical_Chart_of_Accounts.recordType-meta.xml
<RecordType>
    <fullName>FIN_US_Statistical_Chart_of_Accounts</fullName>
    <active>true</active>
    <label>US Statistical Chart of Accounts</label>
</RecordType>