force-app/main/default/objects/FIN_ChartOfAccounts__c/recordTypes/SWE_Statistical_Chart_of_Accounts.recordType-meta.xml
<RecordType>
    <fullName>SWE_Statistical_Chart_of_Accounts</fullName>
    <active>true</active>
    <label>SWE Statistical Chart of Accounts</label>
</RecordType>