force-app/main/default/objects/FIN_ChartOfAccounts__c/listViews/FIN_US_Charts_of_Accounts.listView-meta.xml
<ListView>
    <fullName>FIN_US_Charts_of_Accounts</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Region__c</field>
        <operation>equals</operation>
        <value>US</value>
    </filters>
    <label>US Charts of Accounts</label>
    <sharedTo>
        <group>US_Region</group>
    </sharedTo>
</ListView>